make changes in app level gradle script and make joke appear in joke activity

--- a/Jokes/jokeslibrary/src/main/res/layout/content_jokes.xml
+++ b/Jokes/jokeslibrary/src/main/res/layout/content_jokes.xml
@@ -10,8 +10,11 @@
                 tools:showIn="@layout/activity_jokes">
 
     <TextView
+        android:id="@+id/joke_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/joke_text_view"/>
+        android:text="Joke text"
+        android:textColor="#FF0000"
+        android:textSize="20dp"/>
 
 </RelativeLayout>
